[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/AnimationPlayer/AnimationPlayerState.gd" type="Script" id=1]

[node name="AnimationPlayerState" type="AnimationPlayer"]
script = ExtResource( 1 )

[node name="CustomAnimTimer" type="Timer" parent="."]
process_mode = 0
one_shot = true

[node name="FullBodyAnimTimer" type="Timer" parent="."]
process_mode = 0
one_shot = true

[node name="LingeringAnimTimer" type="Timer" parent="."]
process_mode = 0
one_shot = true

[connection signal="timeout" from="CustomAnimTimer" to="." method="_on_CustomAnimTimer_timeout"]
[connection signal="timeout" from="FullBodyAnimTimer" to="." method="_on_FullBodyAnimTimer_timeout"]
[connection signal="timeout" from="LingeringAnimTimer" to="." method="_on_LingeringAnimTimer_timeout"]
